--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "icebreaker <hi@sonofmagic.top>",
   "license": "MIT",
   "devDependencies": {
-    "@tailwindcss/vite": "^4.1.3",
+    "@tailwindcss/postcss": "^4.1.3",
     "tailwindcss": "^4.1.3",
     "weapp-tailwindcss": "^4.1.4"
   },
