--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "onlyBuiltDependencies": [
       "weapp-tailwindcss"
     ]
+  },
+  "dependencies": {
+    "@weapp-tailwindcss/merge": "^2.0.1"
   }
 }
